--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -172,6 +172,39 @@
 	</div>
 {% endif %}
 
+<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "BlogPosting",
+		"headline": {{ article.title | json }},
+		"articleBody": {{ article.content |  strip_html | json }},
+		{% if article.excerpt != blank %}
+			"description": {{ article.excerpt | script_html | json }},
+		{% endif %}
+		{% if article.image %}
+			"image": [
+				{{ article.image | img_url: 'medium' | prepend: 'https:' | json }}
+			],
+		{% endif %}
+		"datePublished": {{ article.published_at | date: format: "default" | json }},
+		"darteCreated": {{ article.created_at | date: format: "default" | json }},
+		"author": {
+			"@type": "Person",
+			"name": {{ article.author | json }}
+		},
+		"publisher": {
+			"@type": "Organization",
+			"name": {{ shop.name | json }},
+			"logo": {
+				"@type": "ImageObject",
+				"url": {{ shop.logo | img_url: 'medium' | prepend: 'https:' | json }},
+				"width": 600,
+				"height": 60
+			}
+		}
+	}
+</script>
+
 {% schema %}
 {
 	"name": "Template Article",
