--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -80,9 +80,15 @@
 							</div>
 						</div>
 					{% endfor %}
-					{% if paginate.pages > 1 %}
-						{{ paginate | default_pagination }}
-					{% endif %}
+					{% comment %}
+						{% if paginate.pages > 1 %}
+							{{ paginate | default_pagination }}
+						{% endif %}
+					{% endcomment %}
+
+					<div class="max-w-6xl mx-auto">
+						{% render 'pagination', pagination: paginate %}
+					</div>
 				{% endpaginate %}
 			</div>
 		{% else %}
