add: front --> hover animation on product card snippet

--- a/sections/template-collection.liquid
+++ b/sections/template-collection.liquid
@@ -1,5 +1,5 @@
 <div class="px-4 py-8">
-	{% paginate collection.products by 6 %}
+	{% paginate collection.products by section.settings.number_of_products_per_page %}
 		<h1 class="text-3xl text-center">{{ collection.title }}</h1>
 		<div class="max-w-6xl mx-auto">
 			<div class="grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -14,3 +14,20 @@
 		{% render 'pagination', pagination: paginate %}
 	{% endpaginate %}
 </div>
+
+{% schema %}
+{
+	"name": "Collection Template",
+	"settings": [
+		{
+			"type": "range",
+			"id": "number_of_products_per_page",
+			"step": 1,
+			"min": 1,
+			"max": 10,
+			"default": 6,
+			"label": "Number of products per page"
+		}
+	]
+}
+{% endschema %}
