--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -6,7 +6,7 @@
 					<img
 						src="{{ product.featured_image |  img_url: 'medium' }}"
 						alt="{{ product.featured_image.alt }}"
-						class="w-full h-full object-cover"
+						class="w-full h-full object-cover transition duration-1000 ease-in-out hover:scale-105"
 					>
 				</div>
 			</a>
